# sdad-inspector

./: .gitattributes  .gitignore  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SDAD_INSPECTOR_PRODUCT_PLAN.md  design-qa.md  pyproject.toml  review-findings.md  sdad-state.yaml
SPEC/: SPEC-COMPLETE.md
docs/: CROSS_PLATFORM.md  DESIGN_REFERENCE.md  DESIGN_SYSTEM.md  INDEX.md  LOCALIZATION.md  SDAD_INTEGRATION_CONTRACT.md  TODO-Open-Items.md  UPDATE_AND_MIGRATION.md  claim-registry.md  evidence-matrix.md  implementation-notes.md
packaging/: sdad-inspector-version.txt  sdad-inspector.icns  sdad-inspector.spec
scripts/: build_native.py  package_release.py  smoke_native.py  smoke_release_archive.py  validate_browser_contract.py  validate_native_contract.py  validate_packet_0.py  validate_public_repository.py  validate_release.py  validate_sdad_compatibility.py  validate_static_report.py  validate_windows_branding.py  write_checksums.py
sdad_inspector/: __init__.py  activity.py  adapters.py  cli.py  desktop.py  dialogs.py  engine.py  errors.py  native_entry.py  packaging.py  paths.py  preferences.py  progress.py  protocols.py  report.py  rule5.py  server.py  snapshot.py  state.py  updater.py
tests/: test_activity.py  test_core.py  test_desktop.py  test_native_entry.py  test_packaging.py  test_packet_0.py  test_preferences.py  test_protocols.py  test_public_repository.py  test_release.py  test_report.py  test_rule5.py  test_sdad_compatibility.py  test_server.py  test_updater.py
web/: AGENTS.md  index.html  package-lock.json  package.json  tsconfig.json  (+1 more)
(+57 files in other folders)
